force-app/main/default/objects/Trajeto__c/Trajeto__c.object-meta.xml
<CustomObject>
    <label>Trajeto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trajetos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>