force-app/main/default/objects/Trajeto__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Chegada ao destino</label>
    <type>DateTime</type>
</CustomField>