force-app/main/default/objects/Trajeto__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <formula>Cidade_destino__c+&quot;/&quot;+TEXT(Estado_destino__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destino</label>
    <type>Text</type>
</CustomField>