force-app/main/default/objects/Trajeto__c/fields/Estado_origem__c.field-meta.xml
<CustomField>
    <fullName>Estado_origem__c</fullName>
    <label>Estado origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estados</valueSetName>
    </valueSet>
</CustomField>