force-app/main/default/objects/Trajeto__c/fields/Hospedagem__c.field-meta.xml
<CustomField>
    <fullName>Hospedagem__c</fullName>
    <label>Hospedagem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Específica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>