force-app/main/default/objects/Trajeto__c/fields/Incluir_todos_os_viajantes__c.field-meta.xml
<CustomField>
    <fullName>Incluir_todos_os_viajantes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Incluir todos os viajantes</label>
    <type>Checkbox</type>
</CustomField>