force-app/main/default/objects/Trajeto__c/fields/Observacoes_de_reservas__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_de_reservas__c</fullName>
    <label>Observações de reservas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>