force-app/main/default/objects/Trajeto__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <formula>Cidade_origem__c+&quot;/&quot;+TEXT(Estado_origem__c)</formula>
    <label>Origem</label>
    <type>Text</type>
</CustomField>