force-app/main/default/objects/Trajeto__c/fields/Passageiros__c.field-meta.xml
<CustomField>
    <fullName>Passageiros__c</fullName>
    <label>Passageiros</label>
    <summaryForeignKey>Passageiro__c.Trajeto__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>