force-app/main/default/objects/Trajeto__c/fields/Saida_da_origem__c.field-meta.xml
<CustomField>
    <fullName>Saida_da_origem__c</fullName>
    <label>Saída da origem</label>
    <type>DateTime</type>
</CustomField>