force-app/main/default/objects/Trajeto__c/validationRules/origem_preencher.validationRule-meta.xml
<ValidationRule>
    <fullName>origem_preencher</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	ISBLANK(Trajeto_de_origem__c),
	OR(
		ISBLANK(Cidade_origem__c),
		TEXT(Estado_origem__c) == &apos;&apos;
	)
)</errorConditionFormula>
    <errorMessage>Preencha o trajeto de origem ou o endereço de origem</errorMessage>
</ValidationRule>